--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
           <span id="jobTitle">Robotic Process Automation Developer</span>
         </h2>
 
-        <a href="https://linkedin.com/in/ravirawal" target="_blank" class="button">Contact me</a>
+        <a href="contact.html" class="button">Contact me</a>
 
       </div>
 
