--- a/contact.html
+++ b/contact.html
@@ -86,7 +86,7 @@
 
     <form class="contact-form" action="https://api.web3forms.com/submit" method="POST">
 
-        <input type="hidden" name="access_key" value="YOUR_ACCESS_KEY_HERE" />
+        <input type="hidden" name="access_key" value="463519f0-1883-4d35-bca1-f37a11a39bad" />
         <input type="hidden" name="subject" value="New Contact Form Submission from Web3Forms" />
         <input type="hidden" name="from_name" value="My Website" />
 
