--- a/index.html
+++ b/index.html
@@ -164,8 +164,9 @@
             <!-- <h2 class="skills-subtitle">Front-end Skills</h2> -->
             <div class="skills-data">
               <div class="skills-names">
-                <i class="bx bxl-html5 skills-icon"></i>
-                <span class="skills-name">HTML</span>
+                <img class="skills-icon" src="assets/img/python.png" alt="" />
+                <!-- <i class="bx bxl-html5 skills-icon"></i> -->
+                <span class="skills-name">Python</span>
               </div>
               <!-- <div class="skills-bar skills-html"></div> 
              <div>
@@ -174,8 +175,9 @@
             </div>
             <div class="skills-data">
               <div class="skills-names">
-                <i class="bx bxl-css3 skills-icon"></i>
-                <span class="skills-name">CSS</span>
+                <img class="skills-icon" src="assets/img/uipath_logo.jpg" alt="" />
+                <!-- <i class="bx bxl-css3 skills-icon"></i> -->
+                <span class="skills-name">Uipath</span>
               </div>
               <!-- <div class="skills-bar skills-css"></div>  -->
               <!-- <div>
@@ -195,46 +197,33 @@
             </div>
             <div class="skills-data">
               <div class="skills-names">
-                <i class="bx bxl-react skills-icon"></i>
-                <span class="skills-name">React</span>
+                <i class="bx bxl-html5 skills-icon"></i>
+                <span class="skills-name">HTML5</span>
               </div>
               <!-- <div class="skills-bar skills-react"></div> -->
-              <div>
-                <!-- <span class="skills-percentage">50%</span> -->
-              </div>
+              <!-- <div> -->
+              <!-- <span class="skills-percentage">50%</span> -->
+              <!-- </div> -->
             </div>
             <div class="skills-data">
               <div class="skills-names">
-                <i class="bx bxl-redux skills-icon"></i>
-                <span class="skills-name">Redux</span>
+                <img class="skills-icon" src="assets/img/csharp-icon-877x1024-u90gkl28.png" alt="" />
+                <!-- <i class="bx bxl-redux skills-icon"></i> -->
+                <span class="skills-name">C#</span>
               </div>
               <!-- <div class="skills-bar skills-redux"></div>  -->
               <!-- <div class="skills-bar skills-css"></div>  -->
-              <div>
-                <!-- <span class="skills-percentage">50%</span> -->
-              </div>
+              <!-- <div> -->
+              <!-- <span class="skills-percentage">50%</span> -->
+              <!-- </div> -->
 
             </div>
 
-            <div class="skills-data">
-              <div class="skills-names">
-                <img class="skills-icon" src="./assets/img/python.png" alt="" />
-                <span class="skills-name">Python</span>
-              </div>
-            </div>
+
           </div>
           <div>
             <!-- <h2 class="skills-subtitle">Back-end Skills</h2> -->
-            <div class="skills-data">
-              <div class="skills-names">
-                <img class="skills-icon" src="./assets/img/django.png" alt="" />
-                <span class="skills-name">Django</span>
-              </div>
-              <!-- <div class="skills-bar skills-css"></div>  -->
-              <div>
-                <!-- <span class="skills-percentage">70%</span> -->
-              </div>
-            </div>
+
 
             <div class="skills-data">
               <div class="skills-names">
@@ -249,8 +238,8 @@
 
             <div class="skills-data">
               <div class="skills-names">
-                <img class="skills-icon" src="./assets/img/mongodb.png" alt="" />
-                <span class="skills-name">MongoDB</span>
+                <img class="skills-icon" src="assets/img/MySQL-Logo.png" alt="" />
+                <span class="skills-name">MYSQL</span>
               </div>
               <!-- <div class="skills-bar skills-css"></div>  -->
               <div>
@@ -274,8 +263,8 @@
               </div>
               <div class="skills-data">
                 <div class="skills-names">
-                  <img class="skills-icon" src="./assets/img/php.png" alt="" />
-                  <span class="skills-name">PHP</span>
+                  <i class="bx bxl-css3 skills-icon"></i>
+                  <span class="skills-name">CSS</span>
                 </div>
 
               </div>
@@ -284,7 +273,59 @@
           </div>
       </section>
 
-      <!--===== Projects =====-->
+      <!--===== Services =====-->
+      <section class="projects section" id="projects">
+        <h2 class="section-title">Services</h2>
+        <div class="project-container">
+
+          <div class="project-img">
+            <img src="assets/img/rpa-scaled.jpeg" alt="shop app" />
+            <p class="project-title">
+              Automation
+            </p>
+            <p class="project-subtitle">
+              We specialize in automating repetitive and time-consuming tasks within your business processes using
+              advanced software robots. Our tailored solutions streamline operations, reduce manual errors, and increase
+              efficiency, allowing your team to focus on higher-value activities. We ensure seamless integration,
+              enhanced productivity, and measurable ROI.</p>
+          </div>
+          <div class="project-img">
+            <img src="assets/img/web developer.jpg" alt="shop app" />
+            <p class="project-title">
+              Web Development
+            </p>
+            <p class="project-subtitle">
+
+              We offer comprehensive web development services, crafting tailored websites that are visually appealing,
+              functional, and user-friendly. From concept to launch, we focus on responsive design, seamless navigation,
+              and performance optimization, ensuring your online presence is engaging and effective. Our solutions are
+              designed to meet your specific business needs.
+            </p>
+
+          </div>
+          <div class="project-img">
+            <img src="assets/img/shutterstock_684313486.jpg" alt="shop app" />
+            <p class="project-title">
+              Social Media Management
+            </p>
+            <p class="project-subtitle">
+              Our Social Media Management service boosts your online presence by creating and curating engaging content, managing interactions, and analyzing performance metrics. We craft tailored strategies to enhance brand visibility, drive engagement, and grow your audience across various platforms. Let us handle your social media while you focus on your core business.</p>
+          </div>
+          <div class="project-img">
+            <img src="assets/img/paid-ads-520798916 (1).jpg" alt="shop app" />
+            <p class="project-title">
+              Paid Advertising
+            </p>
+            <p class="project-subtitle">
+
+              Our paid advertising services drive targeted traffic to your business using strategic ad placements across various platforms. We optimize campaigns for maximum ROI through precise targeting, creative ad design, and data-driven adjustments, ensuring you reach your ideal audience efficiently and effectively.
+            </p>
+
+          </div>
+
+
+
+
 
   </main>
 
